# boxty

./: .env.example  .gitignore  AGENT_API.md  AGENT_CI.md  AGENT_DOCS.md  AGENT_INFRA.md  AGENT_SDK_JS.md  AGENT_SDK_PY.md  AGENT_WEB.md  AGENT_WORKER.md  ARCHITECTURE_CLARIFICATION.md  BACKEND_CHECKLIST.md  CLI_CHECKLIST.md  CLI_WORKER_CHECKLIST.md  CONTROL_PANEL.md  CONTROL_PLANE_WEB_CHECKLIST.md  COVERAGE_REPORT.md  CRITICAL_ISSUES.md  IMPLEMENTATION_REPORT.md  README.md  SDK_CHECKLIST.md  SDK_JS_CHECKLIST.md  SDK_PYTHON_CHECKLIST.md  TEST_REPORT.md  example.env  install.sh  package.json
.github/workflows/: build-and-publish-release.yml  ci.yml  deploy-all.yml  deploy-api.yml  deploy-control-plane-contabo.yml  deploy-worker.yml  deploy-workers-contabo.yml  destroy-workers.yml  provision-infrastructure.yml  provision-workers.yml  publish-release.yml  publish-sdk-js.yml  publish-sdk-py.yml  release-agentnet-r2.yml  test-ci.yml
.hermes-prompts/: agent-api.txt  agent-ci.txt  agent-docs.txt  agent-infra.txt  agent-sdk-js.txt  agent-sdk-py.txt  agent-web.txt  agent-worker.txt  master-boxty.txt
.hermes-prompts/v3/: agent-cleanup.txt  agent-e2e.txt  agent-infra.txt  agent-sdks.txt  agent-test-sdks.txt  master-boxty.txt
ansible/: DEPLOYMENT.md  deploy-control-plane.yml  deploy-workers.yml  inventory.yml
ansible/templates/: boxty-control-plane.service.j2  boxty-worker.service.j2  control-plane.env.j2  secrets.env.j2  worker-config.json.j2
api/: .env.example  .eslintrc.cjs  package-lock.json  package.json
api/docs/: index.html  openapi.yaml
api/src/: config.js  index.js
cli/: README.md  install.sh  pyproject.toml
cli-client/: pyproject.toml  setup.py
cli-client/boxty_cli/: config.py  main.py  manifest.py  runner.py
cli-client/tests/: test_cli.py
cli-worker/: .gitignore  Cargo.toml  README.md  gpu_integration_spec.md  solana_integration_guide.md
cli-worker/contracts/programs/agentnet-escrow/src/: lib.rs
cli-worker/docs/: architecture.md
cli-worker/src/: gateway.rs  main.rs  resources.rs  state.rs
cli-worker/src/cli/: client.rs  mod.rs  tunnel.rs  worker.rs
cli-worker/src/network/: mod.rs
cli-worker/src/sync/: encrypted_db.rs  mod.rs  object_storage.rs
cli-worker/src/wallet/: mod.rs  solana.rs
cli/boxty_cli/: apps.py  auth.py  config.py  config_cmd.py  containers.py  deploy.py  environments.py  exceptions.py  launch.py  main.py  profile.py  profiles.py  run.py  secrets.py  serve.py  shell.py  tokens.py  utils.py  volumes.py  workspaces.py
cli/sdk/: CLI_DOCS.md  Cargo.toml  agent_server.py  check_solana.py  test_libp2p.rs
cli/sdk/contracts/: Anchor.toml  Cargo.toml
cli/sdk/contracts/src/: lib.rs
cli/sdk/src/: gateway.rs  main.rs  state.rs
cli/sdk/src/cli/: client.rs  mod.rs  provider.rs  tunnel.rs  worker.rs
cli/sdk/src/sandbox/: mod.rs
cli/sdk/src/stream/: local_client.rs  mod.rs  remote_exec.rs
cli/sdk/src/tui/: mod.rs
cli/tests/: conftest.py  test_apps.py  test_auth.py  test_config.py  test_environments.py  test_profile.py  test_secrets.py  test_tokens.py  test_volumes.py  test_workspaces.py
control_plane/: README.md  example.env  pyproject.toml
control_plane/app/: auth.py  config.py  container.py  dynamo.py  http_client.py  integrations.py  main.py  models.py  oauth.py  runpod.py  scheduler.py  secret_crypto.py  security_tokens.py  store.py  stripe_service.py  supervisor_cli.py  user_cli.py  worker_cli.py  worker_runtime.py
control_plane/tests/: test_api_key_auth.py  test_cli.py  test_config.py  test_e2e_deploy.py  test_store.py  test_tunnel.py  test_worker_cli.py  test_worker_runtime.py
docs/: README.md  agentnet-r2-release.md  api-reference.md  architecture.md  auth.md  central-control-plane.md  consensus_replicated_execution.md  dynamodb-single-table.md  email-setup-resend.md  getting-started.md  google-oauth-setup.md  infrastructure-contabo.md  quickstart.md  runtime-migration-plan.md  worker-completeness-audit.md  zk_nosql_architecture.md
docs/cli/: README.md
docs/sdk/: javascript.md  python.md
docs/solana/: freezing-contract.md
docs/workers/: README.md
e2e-tests/: TEST_REPORT.md  run_e2e.py
examples/: example_app.py  example_app.ts  web_server_model.py  web_server_model.ts
examples/nodejs_ecommerce/: app.js  package.json
gateway/: Dockerfile  go.mod
hermes-prompts/: boxty-guide-e2e.md  boxty-web-refactor-v3.txt
hermes/run-1/: agent-ci.txt  agent-sdk-py.txt  agent-worker.txt  designspec.txt  master-boxty.txt  settings.txt
hermes/run-2/: agent-auth-fix.txt  agent-billing-stripe.txt  agent-ci.txt  agent-cloud-real.txt  agent-runtime-real.txt  master-fill.txt
infra/docker/: docker-compose.yml
infra/github/: ci.yml
infra/packer/: cloud-init.yml  worker.pkr.hcl
infrastructure/: README.md
infrastructure/ansible/: DEPLOYMENT.md  deploy-control-plane.yml  deploy-workers.yml  inventory.yml
infrastructure/scripts/: install.sh  sync-secrets.example.env  sync-secrets.sh
infrastructure/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
landing/: index.html  package-lock.json
landing/src/: App.jsx  index.css
scripts/: install-agentnet.sh  run-boxty-2.sh  run-boxty.sh  setup-secrets.sh  tmux-boxty.sh
sdk-js/: package-lock.json  package.json  tsconfig.json
sdk-py/: pyproject.toml
sdk-py/examples/: deploy.py  train.py
sdk-py/src/boxty/: __init__.py  app.py  client.py  environment.py  exceptions.py  image.py  sandbox.py  schedule.py  secret.py  volume.py  workspace.py
sdk-py/src/boxty/cli/: __init__.py  app_cmd.py  billing_cmd.py  config_cmd.py  sandbox_cmd.py  secret_cmd.py  workspace_cmd.py
sdk-py/test/: test_client.py
sdk-py/tests/: test_client.py  test_sandbox.py
sdk/python/: README.md  pyproject.toml
sdk/python/boxty/: __init__.py  app.py  client.py  container_runtime.py  databases.py  exceptions.py  models.py  secrets.py  volumes.py
sdk/python/tests/: test_client.py
web/: .env.example  .env.local  index.html  package-lock.json  package.json  scrape_all.sh  scrape_modal.js  tailwind.config.js  tsconfig.json  vite.config.ts
worker/: Dockerfile  go.mod  go.sum
(+406 files in other folders)
