[project]
name = "boxty-cli"
version = "0.1.0"
description = "Unified Boxty CLI for deploying and running apps."
requires-python = ">=3.11"
dependencies = [
  "boxty>=1.0.0",
  "httpx>=0.27",
]

[project.scripts]
boxty = "boxty_cli.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["boxty_cli*"]
