[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boxty-cli"
version = "0.1.0"
description = "Boxty client CLI — Modal-style serverless GPU platform CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Boxty" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "boxty",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "respx>=0.22",
    "build>=1.2",
]

[project.scripts]
boxty = "boxty_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["boxty_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
