[project]
name = "boxty-control-plane"
version = "0.1.0"
description = "Centralized control plane for Boxty providers, workloads, and RunPod arbitration."
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "stripe>=9.0.0,<10.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.14",
  "httpx>=0.27",
]

[project.scripts]
boxty-user = "app.user_cli:main"
boxty-supervisor = "app.supervisor_cli:main"
boxty-worker = "app.worker_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:DeprecationWarning",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
