[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boxty"
version = "1.0.0"
description = "Boxty Python SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.25.0",
  "websockets>=12.0",
  "typer>=0.9.0",
  "rich>=13.0.0"
]

[project.scripts]
boxty = "boxty.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
